fix receipt bug
